Serializacja V3